--- a/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/inbound/http/controller/SignUpController.kt.tmpl
+++ b/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/inbound/http/controller/SignUpController.kt.tmpl
@@ -1,4 +1,4 @@
-package [[group_name]].[[project_name]].infrastructure.inbound.http.controller
+package [[group_name]].[[project_name]].infrastructure.adapters.inbound.http.controller
 
 import [[group_name]].[[project_name]].application.service.SignUpCustomerRequest
 import [[group_name]].[[project_name]].application.service.SignUpCustomerService
