--- a/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/configuration/ApplicationConfiguration.kt.tmpl
+++ b/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/configuration/ApplicationConfiguration.kt.tmpl
@@ -2,7 +2,7 @@ package [[group_name]].[[project_name]].infrastructure.configuration
 
 import [[group_name]].[[project_name]].application.service.SignUpCustomerService
 import [[group_name]].[[project_name]].domain.model.CustomerRepository
-import [[group_name]].[[project_name]].infrastructure.outbound.memory.InMemoryCustomerRepository
+import [[group_name]].[[project_name]].infrastructure.adapters.outbound.memory.InMemoryCustomerRepository
 import org.springframework.context.annotation.Bean
 import org.springframework.context.annotation.Configuration
 
