--- a/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/memory/InMemoryCustomerRepository.kt.tmpl
+++ b/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/memory/InMemoryCustomerRepository.kt.tmpl
@@ -1,3 +1,5 @@
+package [[group_name]].[[project_name]].infrastructure.adapters.outbound.memory
+
 import [[group_name]].[[project_name]].domain.model.Customer
 import [[group_name]].[[project_name]].domain.model.CustomerRepository
 
