--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.tmpl
@@ -1,4 +1,4 @@
-package [[group_name]].[[project_name]].infrastructure.inbound.http.controller
+package [[group_name]].[[project_name]].infrastructure.adapters.inbound.http.controller
 
 import arrow.core.Either
 import [[group_name]].[[project_name]].application.service.SignUpCustomerRequest
