--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
@@ -1,6 +1,6 @@
 package [[group_name]].[[project_name]].componenttest
 
-import [[group_name]].[[project_name]].infrastructure.Application
+import [[group_name]].[[project_name]].Application
 import org.junit.jupiter.api.Tag
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase
 import org.springframework.boot.test.context.SpringBootTest
