Fix detekt findings

--- a/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/Application.kt.tmpl
+++ b/src/main/kotlin/[[ group_name ]]/[[ project_name ]]/Application.kt.tmpl
@@ -6,6 +6,7 @@ import org.springframework.boot.runApplication
 @SpringBootApplication
 class Application
 
+@Suppress("SpreadOperator")
 fun main(args: Array<String>) {
 	runApplication<Application>(*args)
 }
