--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
@@ -6,6 +6,7 @@ import org.springframework.boot.test.context.SpringBootTest
 import org.springframework.boot.web.server.LocalServerPort
 import org.testcontainers.junit.jupiter.Testcontainers
 
+@Suppress("UnnecessaryAbstractClass")
 @Tag("component")
 @Testcontainers
 @SpringBootTest(classes = [Application::class], webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
