--- a/src/main/resources/application.yaml.tmpl
+++ b/src/main/resources/application.yaml.tmpl
@@ -6,3 +6,12 @@ spring:
     active: dev
   main:
     banner-mode: off
+  datasource:
+    url: jdbc:postgresql://localhost:5432/somedatabasename
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+    hikari:
+      connectionTimeout: 30000
+      idleTimeout: 600000
+      maxLifetime: 1800000
