--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/componenttest/BaseComponentTest.kt.tmpl
@@ -1,9 +1,12 @@
 package [[group_name]].[[project_name]].componenttest
 
-import [[group_name]].[[project_name]].Application
+import  [[group_name]].[[project_name]].Application
+import  [[group_name]].[[project_name]].infrastructure.adapters.outbound.postgres.DatabaseContainer
 import org.junit.jupiter.api.Tag
 import org.springframework.boot.test.context.SpringBootTest
 import org.springframework.boot.web.server.LocalServerPort
+import org.springframework.test.context.DynamicPropertyRegistry
+import org.springframework.test.context.DynamicPropertySource
 import org.testcontainers.junit.jupiter.Testcontainers
 
 @Suppress("UnnecessaryAbstractClass")
@@ -11,6 +14,19 @@ import org.testcontainers.junit.jupiter.Testcontainers
 @Testcontainers
 @SpringBootTest(classes = [Application::class], webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 abstract class BaseComponentTest {
+
     @LocalServerPort
     val servicePort: Int = 0
+
+    companion object {
+
+        @JvmStatic
+        @DynamicPropertySource
+        fun postgresProperties(registry: DynamicPropertyRegistry) {
+            val postgresContainer = DatabaseContainer.postgresContainer
+            registry.add("spring.datasource.url", postgresContainer::getJdbcUrl)
+            registry.add("spring.datasource.username", postgresContainer::getUsername)
+            registry.add("spring.datasource.password", postgresContainer::getPassword)
+        }
+    }
 }
