--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/postgres/PostgresCustomerRepositoryShould.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/postgres/PostgresCustomerRepositoryShould.kt.tmpl
@@ -25,7 +25,7 @@ internal class PostgresCustomerRepositoryShould {
 
     @Test
     fun `save customer`() {
-        val instant = Instant.now().truncatedTo(ChronoUnit.NANOS)
+        val instant = Instant.now().truncatedTo(ChronoUnit.MILLIS)
         val clock = Clock.fixed(instant, ZoneId.systemDefault())
         val customerId = UUID.randomUUID()
         val customer = Customer(
