--- a/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/postgres/DatabaseContainer.kt.tmpl
+++ b/src/test/kotlin/[[ group_name ]]/[[ project_name ]]/infrastructure/adapters/outbound/postgres/DatabaseContainer.kt.tmpl
@@ -13,7 +13,7 @@ class DatabaseContainer {
         .withDatabaseName("somedatabasename")
         .withUsername("postgres")
         .withPassword("postgres")
-        .also(PostgreSQLContainer<*>::start)
+        .also{ it.start() }
 
     val dataSource = HikariConfig()
         .apply {
