--- a/src/test/kotlin/{{ group_name }}/{{ project_name }}/componenttest/BaseComponentTest.kt.jinja
+++ b/src/test/kotlin/{{ group_name }}/{{ project_name }}/componenttest/BaseComponentTest.kt.jinja
@@ -4,7 +4,7 @@ import  {{group_name}}.{{project_name}}.Application
 import  {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres.DatabaseContainer
 import org.junit.jupiter.api.Tag
 import org.springframework.boot.test.context.SpringBootTest
-import org.springframework.boot.web.server.LocalServerPort
+import org.springframework.boot.test.web.server.LocalServerPort
 import org.springframework.test.context.DynamicPropertyRegistry
 import org.springframework.test.context.DynamicPropertySource
 import org.testcontainers.junit.jupiter.Testcontainers
