--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpController.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpController.kt.jinja
@@ -1,7 +1,7 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.inbound.http.controller
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.inbound.http.controller
 
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerRequest
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerService
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerRequest
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerService
 import java.util.UUID
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.HttpStatus
