--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/memory/InMemoryCustomerRepository.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/memory/InMemoryCustomerRepository.kt.jinja
@@ -1,7 +1,7 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.memory
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.memory
 
-import {{group_name}}.{{project_name}}.domain.model.Customer
-import {{group_name}}.{{project_name}}.domain.model.CustomerRepository
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Customer
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerRepository
 
 class InMemoryCustomerRepository : CustomerRepository {
 
