--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/configuration/ApplicationConfiguration.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/configuration/ApplicationConfiguration.kt.jinja
@@ -1,8 +1,8 @@
-package {{group_name}}.{{project_name}}.infrastructure.configuration
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.configuration
 
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerService
-import {{group_name}}.{{project_name}}.domain.model.CustomerRepository
-import {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres.PostgresCustomerRepository
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerService
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerRepository
+import {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres.PostgresCustomerRepository
 import java.time.Clock
 import org.springframework.context.annotation.Bean
 import org.springframework.context.annotation.Configuration
