--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/componenttest/BaseComponentTest.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/componenttest/BaseComponentTest.kt.jinja
@@ -1,7 +1,7 @@
-package {{group_name}}.{{project_name}}.componenttest
+package {{tld}}.{{group_name}}.{{project_name}}.componenttest
 
-import  {{group_name}}.{{project_name}}.Application
-import  {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres.DatabaseContainer
+import {{tld}}.{{group_name}}.{{project_name}}.Application
+import {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres.DatabaseContainer
 import org.junit.jupiter.api.Tag
 import org.springframework.boot.test.context.SpringBootTest
 import org.springframework.boot.test.web.server.LocalServerPort
