--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/componenttest/SignUpCustomerShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/componenttest/SignUpCustomerShould.kt.jinja
@@ -1,9 +1,9 @@
-package {{group_name}}.{{project_name}}.componenttest
+package {{tld}}.{{group_name}}.{{project_name}}.componenttest
 
-import {{group_name}}.{{project_name}}.domain.model.Customer
-import {{group_name}}.{{project_name}}.domain.model.CustomerId
-import {{group_name}}.{{project_name}}.domain.model.Email
-import {{group_name}}.{{project_name}}.domain.model.FullName
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Customer
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerId
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Email
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.FullName
 import io.kotest.assertions.json.shouldEqualJson
 import io.kotest.matchers.shouldBe
 import io.restassured.RestAssured.given
