--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/CustomerShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/CustomerShould.kt.jinja
@@ -1,4 +1,4 @@
-package {{group_name}}.{{project_name}}.domain.model
+package {{tld}}.{{group_name}}.{{project_name}}.domain.model
 
 import arrow.core.left
 import arrow.core.right
