--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/DatabaseContainer.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/DatabaseContainer.kt.jinja
@@ -1,4 +1,4 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
 
 import com.zaxxer.hikari.HikariConfig
 import com.zaxxer.hikari.HikariDataSource
