--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/Application.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/Application.kt.jinja
@@ -1,4 +1,4 @@
-package {{group_name}}.{{project_name}}
+package {{tld}}.{{group_name}}.{{project_name}}
 
 import org.springframework.boot.autoconfigure.SpringBootApplication
 import org.springframework.boot.runApplication
