--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/Customer.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/Customer.kt.jinja
@@ -1,4 +1,4 @@
-package {{group_name}}.{{project_name}}.domain.model
+package {{tld}}.{{group_name}}.{{project_name}}.domain.model
 
 import arrow.core.Either
 import arrow.core.left
