--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/CustomerRepository.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/CustomerRepository.kt.jinja
@@ -1,4 +1,4 @@
-package {{group_name}}.{{project_name}}.domain.model
+package {{tld}}.{{group_name}}.{{project_name}}.domain.model
 
 interface CustomerRepository {
     fun save(customer: Customer): Unit
