--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/DomainError.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/domain/model/DomainError.kt.jinja
@@ -1,3 +1,3 @@
-package {{group_name}}.{{project_name}}.domain.model
+package {{tld}}.{{group_name}}.{{project_name}}.domain.model
 
 data class DomainError(val message: String)
