--- a/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/PostgresCustomerRepository.kt.jinja
+++ b/src/main/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/PostgresCustomerRepository.kt.jinja
@@ -1,7 +1,7 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
 
-import {{group_name}}.{{project_name}}.domain.model.Customer
-import {{group_name}}.{{project_name}}.domain.model.CustomerRepository
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Customer
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerRepository
 import java.time.Clock
 import java.time.LocalDateTime
 import java.util.UUID
