--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/application/service/SignUpCustomerServiceShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/application/service/SignUpCustomerServiceShould.kt.jinja
@@ -1,13 +1,13 @@
-package {{group_name}}.{{project_name}}.application.service
+package {{tld}}.{{group_name}}.{{project_name}}.application.service
 
 import arrow.core.left
 import arrow.core.right
-import {{group_name}}.{{project_name}}.domain.model.Customer
-import {{group_name}}.{{project_name}}.domain.model.CustomerId
-import {{group_name}}.{{project_name}}.domain.model.CustomerRepository
-import {{group_name}}.{{project_name}}.domain.model.DomainError
-import {{group_name}}.{{project_name}}.domain.model.Email
-import {{group_name}}.{{project_name}}.domain.model.FullName
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Customer
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerId
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerRepository
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.DomainError
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Email
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.FullName
 import io.kotest.matchers.shouldBe
 import io.mockk.every
 import io.mockk.just
