--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.jinja
@@ -1,10 +1,10 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.inbound.http.controller
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.inbound.http.controller
 
 import arrow.core.Either
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerRequest
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerResponse
-import {{group_name}}.{{project_name}}.application.service.SignUpCustomerService
-import {{group_name}}.{{project_name}}.domain.model.DomainError
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerRequest
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerResponse
+import {{tld}}.{{group_name}}.{{project_name}}.application.service.SignUpCustomerService
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.DomainError
 import com.ninjasquad.springmockk.MockkBean
 import io.kotest.assertions.json.shouldEqualJson
 import io.mockk.every
