--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/PostgresCustomerRepositoryShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/outbound/postgres/PostgresCustomerRepositoryShould.kt.jinja
@@ -1,9 +1,9 @@
-package {{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
+package {{tld}}.{{group_name}}.{{project_name}}.infrastructure.adapters.outbound.postgres
 
-import {{group_name}}.{{project_name}}.domain.model.Customer
-import {{group_name}}.{{project_name}}.domain.model.CustomerId
-import {{group_name}}.{{project_name}}.domain.model.Email
-import {{group_name}}.{{project_name}}.domain.model.FullName
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Customer
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.CustomerId
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.Email
+import {{tld}}.{{group_name}}.{{project_name}}.domain.model.FullName
 import io.kotest.matchers.shouldBe
 import java.time.Clock
 import java.time.Instant
