Fix imports and package names

--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/architecturetest/HexagonalArchitectureTest.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/architecturetest/HexagonalArchitectureTest.kt.jinja
@@ -1,4 +1,4 @@
-package {{ tld }}{{ group_name }}.{{ project_name }}.architecturetest
+package {{ tld }}.{{ group_name }}.{{ project_name }}.architecturetest
 
 import com.tngtech.archunit.core.importer.ClassFileImporter
 import com.tngtech.archunit.core.importer.ImportOption.Predefined.DO_NOT_INCLUDE_TESTS
