--- a/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.jinja
+++ b/src/test/kotlin/{{ tld }}/{{ group_name }}/{{ project_name }}/infrastructure/adapters/inbound/http/controller/SignUpControllerShould.kt.jinja
@@ -12,7 +12,7 @@ import java.util.UUID
 import org.junit.jupiter.api.Tag
 import org.junit.jupiter.api.Test
 import org.springframework.beans.factory.annotation.Autowired
-import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest
+import org.springframework.boot.webflux.test.autoconfigure.WebFluxTest
 import org.springframework.http.MediaType
 import org.springframework.test.web.reactive.server.WebTestClient
 import org.springframework.test.web.reactive.server.expectBody
